[project]
name = "lazy-think"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.3.1",
    "hf-transfer>=0.1.9",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "ray>=2.42.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
